objects/EMployee_AUS__c.object
<CustomObject>
    <label>EMployee AUS</label>
    <nameField>
        <label>EMployee AUS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EMployee AUS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Count_Of_Days__c</fullName>
        <label>Count Of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Days1__c</fullName>
        <formula>IF( DAY( DATEVALUE(CreatedDate)) &lt; 15 , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of Days1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Month_Date__c</fullName>
        <label>Next Month Date</label>
        <type>Date</type>
    </fields>
</CustomObject>